Task10-test/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
    - host:  ec2-13-60-84-164.eu-north-1.compute.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 90
          # - path: /argo
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: argocd-server
          #       port:
          #         number: 80
